# tempcom

./: .gitignore  CMakeLists.txt  ReadMe.txt  Struct.txt  main.cpp  ТЗ на соискание должности инженер-программист.docx
includes/: main.h
